startscreen: added tile effect

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </ul>
   </header>
 	<section id="startscreen" class="parallax" style='background-image: url("bg.jpg");'>
+    <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
     <div class="startscreen_heading darkblue_transparent thin">
       <h1><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
       <h2 class="lightgrey">Architectural Visualization &amp; 3D Art</h2>
