added jump targets to header

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <header class="darkblue_transparent">
     <ul class="lightgrey">
-      <li>portfolio</li>
-      <li>about</li>
-      <li>contact</li>
+      <li><a href="#portfolio">portfolio</a></li>
+      <li><a href="#about">about</a></li>
+      <li><a href="#contact">contact</a></li>
     </ul>
   </header>
 	<section id="startscreen" class="parallax" style='background-image: url("bg.jpg");'>
@@ -28,12 +28,15 @@
 	</section>
 
 	<section id="portfolio">
+    <h1>portfolio</h1>
 	</section>
 
-	<section id="about">
+	<section id="about" class="darkblue_transparent">
+    <h1>about</h1>
 	</section>
 
 	<section id="contact">
+    <h1>contact</h1>
 	</section>
 
   </body>
