some additional transitions

--- a/index.html
+++ b/index.html
@@ -15,36 +15,33 @@
   </head>
 
   <body>
+    <nav id="nav" class="darkblue_transparent">
+      <a href=""><span id="nav_logo" class="hidden"><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></span></a>
+      <ul class="lightgrey">
+        <li id="nav_portfolio"><a href="#portfolio">portfolio</a></li>
+        <li id="nav_about"><a href="#about">about</a></li>
+        <li id="nav_contact"><a href="#contact">contact</a></li>
+      </ul>
+    </nav>
 
+  	<section id="startscreen" class="parallax" style='background-image: url("bg.jpg");'>
+      <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
+      <div class="startscreen_heading darkblue_transparent thin">
+        <h1><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
+        <h3 class="lightgrey">Architectural Visualization &amp; 3D Art</h3>
+      </div> <!-- startscreen_heading -->
+  	</section>
 
-  <nav id="nav" class="darkblue_transparent">
-    <a href=""><span id="nav_logo" class="hidden">jakob starick.</span></a>
-    <ul class="lightgrey">
-      <li id="nav_portfolio"><a href="#portfolio">portfolio</a></li>
-      <li id="nav_about"><a href="#about">about</a></li>
-      <li id="nav_contact"><a href="#contact">contact</a></li>
-    </ul>
-  </nav>
+  	<section id="portfolio">
+      <h2>portfolio</h2>
+  	</section>
 
-	<section id="startscreen" class="parallax" style='background-image: url("bg.jpg");'>
-    <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
-    <div class="startscreen_heading darkblue_transparent thin">
-      <h1><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
-      <h2 class="lightgrey">Architectural Visualization &amp; 3D Art</h2>
-    </div> <!-- startscreen_heading -->
-	</section>
+  	<section id="about" class="darkblue_transparent">
+      <h2>about</h2>
+  	</section>
 
-	<section id="portfolio">
-    <h2>portfolio</h2>
-	</section>
-
-	<section id="about" class="darkblue_transparent">
-    <h2>about</h2>
-	</section>
-
-	<section id="contact">
-    <h2>contact</h2>
-	</section>
-
+  	<section id="contact">
+      <h2>contact</h2>
+  	</section>
   </body>
 </html>
