added parallax on contact heading

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-  	<section id="startscreen" class="parallax" style='background-image: url("bg.jpg");'>
+  	<section id="startscreen" class="parallax" style='background-image: url("src/img/bg/starick-bg-living-room.jpg");'>
       <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
       <div class="startscreen_heading darkblue_transparent thin">
         <h1><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
@@ -41,7 +41,11 @@
   	</section>
 
   	<section id="contact">
-      <h2>contact</h2>
+      <div class="one-third parallax" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
+        <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
+        <span class="darkblue_transparent white"><h2>contact</h2></span>
+      </div>
+
   	</section>
   </body>
 </html>
