--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   	<link href="src/css/style.css" rel="stylesheet">
     <link href="src/css/font.css" rel="stylesheet">
     <link href="src/css/nav.css" rel="stylesheet">
+    <link href="src/css/portfolio.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakob Starick - Architectural Visualization and 3D Art</title>
 
@@ -34,6 +35,32 @@
 
   	<section id="portfolio">
       <h2>portfolio</h2>
+      <div class="portfolio_container">
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+        <div class="portfolio_preview">
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+        </div>
+      </div>
   	</section>
 
   	<section id="about" class="darkblue_transparent">
@@ -43,7 +70,7 @@
   	<section id="contact">
       <div class="one-third parallax" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
         <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
-        <span class="darkblue_transparent white"><h2>contact</h2></span>
+        <h2><span class="darkblue_transparent white padding">contact</span></h2>
       </div>
 
   	</section>
