about: added content

--- a/index.html
+++ b/index.html
@@ -63,12 +63,65 @@
       </div>
   	</section>
 
-  	<section id="about" class="darkblue_transparent">
-      <h2>about</h2>
-  	</section>
+  	<section id="about" class="darkblue">
+      <h2 class="wide">about</h2>
+      <div class="block">
+        <h3>technical skills</h3>
+        <ul class="text">
+          <li>modelling (lowpoly/highpoly)</li>
+          <li>rendering</li>
+          <li>lighting and composition</li>
+          <li>PBR workflow</li>
+          <li>UV mapping and texturing</li>
+          <li>scripting</li>
+          <li>cloth simulation</li>
+        </ul>
+        <h3>soft skills</h3>
+        <ul class="text">
+          <li>fast learning of new toolsets and workflows</li>
+          <li>high sense of responsibility for team and project</li>
+          <li>fast and efficient task solving</li>
+          <li>both team-based and autonomous worker</li>
+          <li>flexible time-management</li>
+        </ul>
+    	</div>
+      <div class="block">
+        <h3>software</h3>
+        <ul class="text">
+          <li>3DS Max</li>
+          <li>Maya</li>
+          <li>VRay</li>
+          <li>Corona</li>
+          <li>Photoshop</li>
+          <li>Unreal Engine 4</li>
+          <li>Mudbox</li>
+          <li>html, php, css, MySQL</li>
+          <li>C#</li>
+        </ul>
+        <h3>languages</h3>
+        <ul class="text">
+          <li>German &ndash; native</li>
+          <li>English &ndash; highly proficient, spoken and written</li>
+        </ul>
+      </div>
+      <div class="block">
+        <p class="text justify">
+          Welcome! I'm Jakob Starick, an upcoming 3D artist and currently located in Berlin, Germany.
+          My passion for digital content goes a long way back, and creative work is the most fullfilling
+          activity I can think of.
+        </p>
+        <h3>interests</h3>
+        <ul class="text">
+          <li>travelling</li>
+          <li>music</li>
+          <li>games (digital and analog)</li>
+          <li>history and culture</li>
+        </ul>
+      </div>
+
+    </section>
 
   	<section id="contact">
-      <div class="one-third parallax" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
         <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
         <h2><span class="darkblue_transparent white padding">contact</span></h2>
       </div>
