contact: added contact data

--- a/index.html
+++ b/index.html
@@ -122,9 +122,21 @@
     </section>
 
   	<section id="contact">
+      <div class="one-third parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
         <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
-        <h2><span class="darkblue_transparent white padding">contact</span></h2>
+        <h2><span class="darkblue_transparent white padding wide">contact</span></h2>
       </div>
+      <div class="block text">
+        <p>
+          Jakob Starick <br/>
+          Gehsener Str. 79<br/>
+          12555 Berlin
+        </p>
+        <p>
+          <a href="jakob.starick@web.de">jakob.starick@web.de</a>
+        </p>
+      </div>
+
 
   	</section>
   </body>
