--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   	<link href="src/css/style.css" rel="stylesheet">
     <link href="src/css/font.css" rel="stylesheet">
@@ -28,21 +29,23 @@
   	<section id="startscreen" class="parallax" style='background-image: url("src/img/bg/starick-bg-living-room.jpg");'>
       <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
       <div class="startscreen_heading darkblue_transparent thin">
-        <h1><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
-        <h3 class="lightgrey">Architectural Visualization &amp; 3D Art</h3>
+        <h1 class="wide"><span class="lightgrey thin">jakob</span> starick<span class="lightgrey">.</span></h1>
+        <h3 class="lightgrey thin">Architectural Visualization &amp; 3D Art</h3>
       </div> <!-- startscreen_heading -->
   	</section>
 
   	<section id="portfolio">
-      <h2>portfolio</h2>
+      <h2 class="wide">portfolio</h2>
       <div class="portfolio_container">
         <div class="portfolio_preview">
-          <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
+          <img class="portfolio_preview_picture" src="src/img/preview/starick-apartement.jpg"/>
           <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <h3 class="darkblue_transparent white padding thin wide">apartement &ndash; living room</h3>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
           <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <h3 class="darkblue_transparent white padding thin wide">barclay clawfoot bathtub</h3>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
