changed heading layout

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <nav id="nav" class="darkblue_transparent">
-      <a href=""><span id="nav_logo" class="hidden"><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></span></a>
+    <nav id="nav" class="darkblue_transparent hidden">
+      <a href=""><span id="nav_logo"><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></span></a>
       <ul class="lightgrey">
         <li id="nav_portfolio"><a href="#portfolio">portfolio</a></li>
         <li id="nav_about"><a href="#about">about</a></li>
@@ -27,10 +27,14 @@
     </nav>
 
   	<section id="startscreen" class="parallax" style='background-image: url("src/img/bg/starick-bg-living-room.jpg");'>
-      <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
       <div class="startscreen_heading darkblue_transparent thin">
         <h1 class="wide"><span class="lightgrey thin">jakob</span> starick<span class="lightgrey">.</span></h1>
         <h3 class="lightgrey thin">Architectural Visualization &amp; 3D Art</h3>
+        <ul class="lightgrey">
+          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
       </div> <!-- startscreen_heading -->
   	</section>
 
