--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
       <div class="portfolio_container">
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-apartement.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
           <h3 class="darkblue_transparent white padding thin wide">apartement &ndash; living room</h3>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
           <h3 class="darkblue_transparent white padding thin wide">barclay clawfoot bathtub</h3>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
         </div>
         <div class="portfolio_preview">
           <img class="portfolio_preview_picture" src="src/img/preview/starick-preview-barclay-clawfoot.jpg"/>
-          <img class="overlay" src="src/img/bg/tiles-one-third.png"/>
+          <div class="overlay"></div>
         </div>
       </div>
   	</section>
