--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   	<link href="src/css/style.css" rel="stylesheet">
     <link href="src/css/font.css" rel="stylesheet">
     <link href="src/css/nav.css" rel="stylesheet">
+    <link href="src/css/startscreen.css" rel="stylesheet">
     <link href="src/css/portfolio.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakob Starick - Architectural Visualization and 3D Art</title>
