--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
     </nav>
 
   	<section id="startscreen" class="parallax" style='background-image: url("src/img/bg/starick-bg-living-room.jpg");'>
-      <div class="startscreen_heading darkblue_transparent thin">
-        <h1 class="wide"><span class="lightgrey thin">jakob</span> starick<span class="lightgrey">.</span></h1>
-        <h3 class="lightgrey thin">Architectural Visualization &amp; 3D Art</h3>
-        <ul class="lightgrey">
-          <li><a href="#portfolio">portfolio</a></li>
-          <li><a href="#about">about</a></li>
-          <li><a href="#contact">contact</a></li>
+      <div class="darkblue_transparent thin" id="startscreen_menu">
+        <div class="startscreen_heading">
+          <h1 class="wide thin"><span class="lightgrey">jakob</span> starick<span class="lightgrey">.</span></h1>
+          <h3 class="lightgrey thin">Architectural Visualization &amp; 3D Art</h3>
+        </div> <!-- startscreen_heading -->
+        <ul class="white wide">
+          <li><a href="#portfolio">&raquo; portfolio</a></li>
+          <li><a href="#about">&raquo; about</a></li>
+          <li><a href="#contact">&raquo; contact</a></li>
         </ul>
-      </div> <!-- startscreen_heading -->
+      </div> <!-- startscreen_menu -->
+
   	</section>
 
   	<section id="portfolio">
