--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
       <div class="block">
         <p class="text justify">
-          Welcome! I'm Jakob Starick, an upcoming 3D artist currently located in Berlin, Germany.
+          Welcome! I'm Jakob Starick, an upcoming 3D artist currently located in the area of Berlin, Germany.
           Creativity has been my driving passion since my first years. While other children wanted to be policemen and doctors, I wanted to become an author.
           While the direction itself changed, the will to create worlds, tell stories and inspire people with my own hands' work has stayed a constant.
           When I first delved into 3D art in 2011, I knew this was the one thing I want to do for the rest of my life.
@@ -139,14 +139,14 @@
 
   	<section id="contact">
       <div class="one-third parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
-        <img class="overlay" src="src/img/bg/tiles-fullscreen.png"/>
-        <h2><span class="darkblue_transparent white padding wide">contact</span></h2>
+        <div class="overlay"></div>
+        <h2><span class="white padding wide">contact</span></h2>
       </div>
       <div class="block text">
         <p>
           Jakob Starick <br/>
-          Gehsener Str. 79<br/>
-          12555 Berlin
+          Stra&szlig;e der Jugend<br/>
+          16792 Zehdenick
         </p>
         <p>
           <a href="jakob.starick@web.de">jakob.starick@web.de</a>
