meta data (SEO)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jakob Starick - Architectural Visualization and 3D Art</title>
+    <meta name="keywords" content="Architectural visualization, 3D Art, Modelling"/>
+    <meta name="description" content="Jakob Starick is a 3D artist specialized in architectural
+      visualization and environment design, currently located in Berlin, Germany."/>
+    <meta property="og:locale" content="en-US"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Jakob Starick - Architectural Visualization and 3D Art"/>
+    <meta property="og:url" content="https://www.jakobstarick.com"/>
+    <meta property="og:site_name" content="Jakob Starick - Architectural Visualization and 3D Art"/>
+    <link rel="canonical" href="https://www.jakobstarick.com"/>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   	<link href="src/css/style.css" rel="stylesheet">
@@ -10,11 +24,6 @@
     <link href="src/css/nav.css" rel="stylesheet">
     <link href="src/css/startscreen.css" rel="stylesheet">
     <link href="src/css/portfolio.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jakob Starick - Architectural Visualization and 3D Art</title>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
   </head>
 
   <body>
