pushed the contact headline beneath the parallax.

--- a/index.html
+++ b/index.html
@@ -146,12 +146,11 @@
       </div>
 
     </section>
-
+    <div class="one-third parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
+      <div class="overlay"></div>
+    </div>
   	<section id="contact">
-      <div class="one-third parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
-        <div class="overlay"></div>
-        <h2><span class="white padding wide">contact</span></h2>
-      </div>
+      <h2 class="wide">contact</h2>
       <div class="block text">
         <p>
           Jakob Starick <br/>
