--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
 
     </section>
-    <div class="one-third parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
+    <div class="half-height parallax margin-bottom" style='background-image: url("src/img/bg/starick-bg-guitar.jpg");'>
       <div class="overlay"></div>
     </div>
   	<section id="contact">
