about text: minor changes

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       </div>
       <div class="block">
         <p class="text justify">
-          Welcome! I'm Jakob Starick, an upcoming 3D artist currently located in the area of Berlin, Germany.
+          Welcome! I'm Jakob, an upcoming 3D artist currently located in the area of Berlin, Germany.
           Creativity has been my driving passion since my first years. While other children wanted to be policemen and doctors, I wanted to become an author.
           While the direction itself changed, the will to create worlds, tell stories and inspire people with my own hands' work has stayed a constant.
-          When I first delved into 3D art in 2011, I knew this was the one thing I want to do for the rest of my life.
+          When I first delved into 3D art in 2011 I knew this was the one thing I want to do for the rest of my life.
         </p>
         <p class="text justify">
           I combine a wide range of interests, ranging from technical to artistical topics. My work is the synthesis of all my passion, my technical background, my sense
