changed contact details

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
       <h2 class="wide">contact</h2>
       <div class="block_double text">
         <p>
-          Want to get in touch? Don't hesitate!<br/> Shoot me a mail, or reach out to one of my social media accounts.
+          Want to get in touch? Don't hesitate!<br/> Shoot me a mail, or reach out to me via social media.
         </p>
         <p>
-          <a href="jakob.starick@web.de">jakob.starick@web.de</a>
+          <a href="mailto:contact@jakobstarick.com" class="underlined extrawide">contact@jakobstarick.com</a>
         </p>
         <p>
           <a href="https://www.linkedin.com/in/jakob-starick-283b8a145" target="_blank"><img class="social-media" src="src/img/icon/linkedin.svg"/></a>
@@ -172,7 +172,7 @@
             <textarea class="width-70" id="contact_message"></textarea>
           </p>
           <p>
-            <input type="submit" value="send"/>
+            <input type="submit" value="send" id="contact_submit"/>
           </p>
         </form>
         <br/>
