--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://www.jakobstarick.com"/>
     <meta property="og:site_name" content="Jakob Starick - Architectural Visualization and 3D Art"/>
     <link rel="canonical" href="https://www.jakobstarick.com"/>
+    <link rel="me" href="https://plus.google.com/110271333957729259223"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -148,7 +149,7 @@
           <a href="mailto:contact@jakobstarick.com" class="underlined extrawide">contact@jakobstarick.com</a>
         </p>
         <p>
-          <a href="https://www.linkedin.com/in/jakob-starick-283b8a145" target="_blank"><img class="social-media" src="src/img/icon/linkedin.svg"/></a>
+          <a href="https://www.linkedin.com/in/jakob-starick" target="_blank"><img class="social-media" src="src/img/icon/linkedin.svg"/></a>
           <a href="https://twitter.com/JakobStarick" target="_blank"><img class="social-media"  src="src/img/icon/twitter.svg"/></a>
           <a href="https://plus.google.com/110271333957729259223" target="_blank"><img class="social-media"  src="src/img/icon/googleplus.svg"/></a>
           <script src="src/script/convert-svg.js"></script>
