--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:title" content="Jakob Starick - Architectural Visualization and 3D Art"/>
     <meta property="og:url" content="https://www.jakobstarick.com"/>
     <meta property="og:site_name" content="Jakob Starick - Architectural Visualization and 3D Art"/>
+    <meta name="msvalidate.01" content="C172AB63EFF2C92B9A8CD83C4280B65E" />
     <link rel="canonical" href="https://www.jakobstarick.com"/>
     <link rel="me" href="https://plus.google.com/110271333957729259223"/>
 
