added portrait and realigned about section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,37 @@
   	<section id="about">
       <h2 class="wide">about</h2>
       <div class="block">
+        <img class="portrait" src="src/img/jakob-starick.jpg"/>
+      </div>
+      <div class="block">
+        <p class="text justify">
+          Welcome! I'm Jakob, an upcoming 3D artist currently located in the area of Berlin, Germany.
+          Creativity has been my driving passion since my first years. While other children wanted to be policemen and doctors, I wanted to become an author.
+          While the direction itself changed, the will to create worlds, tell stories and inspire people with my own hands' work has stayed a constant.
+          When I first delved into 3D art in 2011 I knew this was the one thing I want to do for the rest of my life.
+        </p>
+        <p class="text justify">
+          I combine a wide range of interests, ranging from technical to artistical topics. My work is the synthesis of all my passion, my technical background, my sense
+          of art and the experiences I had the great joy to make so far. I am always willing to learn, to broaden my horizon and to find myself as a part of new, interesting projects.
+        </p>
+      </div>
+      <div class="block">
+        <h3>languages</h3>
+        <ul class="text">
+          <li>German &ndash; native</li>
+          <li>English &ndash; highly proficient, spoken and written</li>
+        </ul>
+        <h3>interests</h3>
+        <ul class="text">
+          <li>travelling</li>
+          <li>music</li>
+          <li>games (digital and analog)</li>
+          <li>history and culture</li>
+        </ul>
+
+      </div>
+      <h2 class="wide">skills</h2>
+      <div class="block">
         <h3>technical skills</h3>
         <ul class="text">
           <li>modelling (lowpoly/highpoly)</li>
@@ -86,6 +117,8 @@
           <li>scripting</li>
           <li>cloth simulation</li>
         </ul>
+      </div>
+      <div class="block">
         <h3>soft skills</h3>
         <ul class="text">
           <li>fast learning of new toolsets and workflows</li>
